<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/Encertat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:textSize="50sp"
        android:textColor="@color/encertat"
        android:textStyle="bold"
        android:text="@string/encertat"/>

    <TextView
        android:id="@+id/preNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Encertat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/nomUser" />

    <TextView
        android:id="@+id/nomUsuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Encertat"
        app:layout_constraintStart_toEndOf="@id/preNom"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text=""/>


    <TextView
        android:id="@+id/preAEndevinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/preNom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/aEndevinar"/>

    <TextView
        android:id="@+id/nombreAEndevinar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/preNom"
        app:layout_constraintStart_toEndOf="@id/preAEndevinar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text=""/>


    <TextView
        android:id="@+id/triat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/preAEndevinar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/endevinat"/>
    <TextView
        android:id="@+id/nombreEndevinat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/preAEndevinar"
        app:layout_constraintStart_toEndOf="@id/triat"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text=""/>

    <Button
        android:id="@+id/btnTorna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/torna"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>