<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/nomUsuari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/introdueix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/nomUsuari"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/numero"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/introdueix"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="360dp"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        />
    <Button
        android:id="@+id/btnOk"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/introdueix"
        app:layout_constraintStart_toEndOf="@id/input"
        android:text="@string/endevina"
        />
    <Button
        android:id="@+id/btnTorna"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@parent
"
        app:layout_constraintStart_toEndOf="@id/input"
        android:text="@string/endevina"
        />




</androidx.constraintlayout.widget.ConstraintLayout>